v3: skip Lesson 25 (BLine), write Lesson 26 (drive to pose)
Lesson 25 (path events) has the same root cause as the already-skipped
Lesson 17: its entire content is BLine's event-marker registration and
FollowPath.overrideRotation, layered on machinery R2 already confirmed
structurally incompatible with this alpha's Commands V3. No new
verification needed - this is Lesson 17's blocker one lesson further
downstream. Recorded in the plan doc (R2, per-lesson impact table,
housekeeping checklist) alongside 17 and 22, no interim written, same
call as both.

Lesson 26 does NOT depend on BLine, but that needed confirming rather
than assuming - the old lesson's stage one built a generated BLine Path
for the coarse approach. Redesigned so stage one is Lesson 11's already-
shipped driveToPose sketch, reused completely unmodified: its known flaw
(finishes on translation alone, ignoring rotation) stops being a
liability once a second stage is guaranteed to run after it and check
rotation itself. Stage two is new: alignToPose, three PIDController
fields (kept as fields because atPose() has to read the same error the
last calculate() saw), enableContinuousInput for the angle wrap, no
clamp anywhere (its top speed is bounded by construction - it only ever
starts from wherever driveToPose's own 5cm handoff leaves it). PIDController
itself needed zero porting, confirmed via javap against wpimath-java.
Autos.driveToScoringPose chains both stages with coroutine.await(...),
the same shape as driveTurnDrive since Lesson 9. Wired as a third
@Autonomous opmode (RobotAutoDriveToPose, matching OD3's multi-opmode
pattern) and a teleop left-bumper hold.

Two real measurement-methodology findings surfaced while getting honest
numbers for the lesson's comparison table, both recorded in R28:

- A bare tick loop with no sleep gave nondeterministic results across
  runs of the identical scenario, because Phoenix's simulated TalonFX
  firmware runs in real time (same root cause CLAUDE.md already
  d